🙍⛽️ Checkpoint ./server.js:27113320/252 ./views/index.html:27113320/115

--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A cool thing made with Glitch">
 
-    <title>Welcome to Glitch!</title>
+    <title>CSV Converter!</title>
 
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
     <!-- import the webpage's stylesheet -->
@@ -19,13 +19,12 @@
   </head>
   <body>
     <header>
-      <h1>A Dream of the Future</h1>
+      <h1>CSV Conversion with ease...</h1>
     </header>
 
     <main>
-      <h2>Oh hi,</h2>
 
-      <p>Tell me your hopes and dreams:</p>
+<!--       <p>Tell me your hopes and dreams:</p> -->
 
       <form>
         <label>
