🌍👰 Checkpoint ./views/index.html:27113320/115 ./server.js:27113320/828

--- a/views/index.html
+++ b/views/index.html
@@ -28,17 +28,17 @@
 
       <form>
         <label>
-          New Dream
-          <input name="dream" type="text" maxlength="100" required placeholder="Dreams!">
+          Paste in your CSV url link
+          <input name="dream" type="text" maxlength="100" required placeholder="Paste in the URL link!">
         </label>
-        <button type="submit" id="submit-dream">Add Dream</button>
+        <button type="submit" id="submit-dream">Convert</button>
       </form>
 
-      <section class="dreams">
+<!--       <section class="dreams"> -->
         <ul id="dreams">
-          <em>loading dreams&hellip;</em>
+<!--           <em>loading dreams&hellip;</em> -->
         </ul>
-      </section>
+<!--       </section> -->
     </main>
 
     <footer>Made with <a href="https://glitch.com">Glitch</a>!</footer>
