--- a/views/index.html
+++ b/views/index.html
@@ -29,11 +29,11 @@
       <form>
         <label>
           Paste in CSV url link
-          <input name="csv-url" type="text" maxlength="100" required placeholder="Paste in URL link!">
+          <input name="csv-url" type="text" maxlength="100" placeholder="Paste in URL link!">
         </label>
         <label>
-          Enter select fields
-          <input name="fields" type="text" maxlength="100" required placeholder="Enter select fields!">
+          Enter select fields (optional)
+          <input name="fields" type="text" maxlength="100" placeholder="Enter select fields!">
         </label>    
         <button type="submit" id="submitForm">Convert</button>
       </form>
