😘🐕 Checkpoint ./views/index.html:27113320/20 ./public/script.js:27113320/253

--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
         </label>
         <label>
           Enter select fields (optional)
-          <input name="fields" type="text" maxlength="100" placeholder="Enter select fields!">
+          <input name="fields" type="text" maxlength="100" placeholder="Enter select fields seperated by commas!">
         </label>    
         <button type="submit" id="submitForm">Convert</button>
       </form>
